crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__keyword_bounded_type.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(pub enum FooKeywords { Foo : "foo", });
#[derive(
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo {
    Foo(::css_parse::T![Ident]),
    Oblique(::css_parse::T![Ident], Option<crate::Angle>),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        match p.parse_if_peek::<FooKeywords>()? {
            Some(FooKeywords::Foo(ident)) => {
                return Ok(Self::Foo(ident));
            }
            None => {}
        }
        let combo0 = {
            let ident = p.parse::<::css_parse::T![Ident]>()?;
            let c: ::css_lexer::Cursor = ident.into();
            if !p.eq_ignore_ascii_case(c, "oblique") {
                Err(
                    ::css_parse::diagnostics::UnexpectedIdent(
                        p.parse_str(c).into(),
                        c.into(),
                    ),
                )?
            }
            ident
        };
        let combo1 = if p.peek::<crate::Angle>() {
            let start = p.offset();
            let ty = p.parse::<crate::Angle>()?;
            let valf32: f32 = ty.into();
            if !(-90f32..=90f32).contains(&valf32) {
                return Err(
                    ::css_parse::diagnostics::NumberOutOfBounds(
                        valf32,
                        format!("{}..{}", - 90f32, 90f32),
                        ::css_lexer::Span::new(start, p.offset()),
                    ),
                )?;
            }
            Some(ty)
        } else {
            None
        };
        Ok(Self::Oblique(combo0, combo1))
    }
}
