crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__none_or_type.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
struct Foo(pub crate::NoneOr<crate::CustomIdent>);
