crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__ordered_combinator_with_checks_derives_parse.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Bar :
    "bar", }
);
#[derive(Parse)]
enum Foo {
    #[parse(keyword = FooKeywords::Bar)]
    Bar(::css_parse::T![Ident]),
    Foo(
        ::css_parse::T![Ident],
        #[parse(in_range = -90f32..= 90f32)]
        Option<crate::Angle>,
    ),
}
